# goldctf-2024

./: README.md  check.py  requirements.txt
.github/workflows/: check-services.yml
checkers/: requirements.txt
checkers/abilene-paradox/: abilene_lib.py  checker.py
checkers/cell/: cell_lib.py  checker.py
checkers/conveyor/: checker.py  conveyorlib.py
checkers/digger/: api.py  checker.py  des.py  minipwn.py
checkers/star/: checker-priv.pem  checker.py  starlib.py
internal/cell-front/: package-lock.json  package.json  svelte.config.js
internal/digger/: Makefile
internal/digger/src/: main.cpp
services/abilene-paradox/: Dockerfile  docker-compose.yml  run.sh
services/abilene-paradox/app/: Cargo.toml  Cranky.toml
services/abilene-paradox/cleaner/: cleaner.sh
services/abilene-paradox/runner/: main.c
services/cell/: backend.Dockerfile  docker-compose.yml
services/conveyor/: README.md  docker-compose.yml  pyproject.toml
services/digger/: docker-compose.yml
services/example/: .gitignore  requirements.txt
services/goldarn/: Dockerfile  docker-compose.yml
services/star/: Dockerfile  docker-compose.yml  go.mod  go.sum
sploits/abilene-paradox/: abilene_lib.py  gotty_config.py  stack_overflow.py
sploits/cell/: README.md  modify_sheet.py
sploits/conveyor/: README.md  conveyor-rpyc-0day.py  pyproject.toml
sploits/digger/: README.md  api.py  requirements.txt  slide.py  sploit.py  tables.py
sploits/goldarn/: README.md  gotty_config.py
sploits/nugget/: README.md  race.py
sploits/star/: .gitignore  README.md  race.py  read.go  starlib.py
(+72 files in other folders)
